examples/manifests/webhook/mutatingwebhookconfig.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mariadb-operator-webhook
  annotations:
    k8s.mariadb.com/webhook: ""
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: mariadb-operator-webhook
      namespace: default
      path: /mutate-mariadb-mmontes-io-v1alpha1-mariadb
  failurePolicy: Fail
  name: mmariadb.kb.io
  rules:
  - apiGroups:
    - k8s.mariadb.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - mariadbs
  sideEffects: None
