examples/manifests/webhook/validatingwebhookconfig.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: mariadb-operator-webhook
  annotations:
    k8s.mariadb.com/webhook: ""
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: mariadb-operator-webhook
        namespace: default
        path: /validate-mariadb-mmontes-io-v1alpha1-backup
    failurePolicy: Fail
    name: vbackup.kb.io
    rules:
      - apiGroups:
          - k8s.mariadb.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - backups
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: mariadb-operator-webhook
        namespace: default
        path: /validate-mariadb-mmontes-io-v1alpha1-connection
    failurePolicy: Fail
    name: vconnection.kb.io
    rules:
      - apiGroups:
          - k8s.mariadb.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - connections
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: mariadb-operator-webhook
        namespace: default
        path: /validate-mariadb-mmontes-io-v1alpha1-database
    failurePolicy: Fail
    name: vdatabase.kb.io
    rules:
      - apiGroups:
          - k8s.mariadb.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - databases
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: mariadb-operator-webhook
        namespace: default
        path: /validate-mariadb-mmontes-io-v1alpha1-grant
    failurePolicy: Fail
    name: vgrant.kb.io
    rules:
      - apiGroups:
          - k8s.mariadb.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - grants
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: mariadb-operator-webhook
        namespace: default
        path: /validate-mariadb-mmontes-io-v1alpha1-mariadb
    failurePolicy: Fail
    name: vmariadb.kb.io
    rules:
      - apiGroups:
          - k8s.mariadb.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - mariadbs
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: mariadb-operator-webhook
        namespace: default
        path: /validate-mariadb-mmontes-io-v1alpha1-restore
    failurePolicy: Fail
    name: vrestore.kb.io
    rules:
      - apiGroups:
          - k8s.mariadb.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - restores
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: mariadb-operator-webhook
        namespace: default
        path: /validate-mariadb-mmontes-io-v1alpha1-sqljob
    failurePolicy: Fail
    name: vsqljob.kb.io
    rules:
      - apiGroups:
          - k8s.mariadb.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - sqljobs
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: mariadb-operator-webhook
        namespace: default
        path: /validate-mariadb-mmontes-io-v1alpha1-user
    failurePolicy: Fail
    name: vuser.kb.io
    rules:
      - apiGroups:
          - k8s.mariadb.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - users
    sideEffects: None
